<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assassins</string>
    <string name="folder_name">Assassins</string>
    <string name="title_section1">Local</string>
    <string name="title_section2">National</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="signup_text_label">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password.</string>
    <string name="signup_error_title">Error</string>
    <string name="invalid_email_address_message">A valid email address must be entered.</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="mismatch_password_message">Passwords do not match.</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_local_fragment">LocalFragment</string>
    <string name="empty_inbox_label">No Messages</string>
    <string name="google_play_services_are_missing">Google Play Services are missing.</string>
    <string name="location_services_message">Enable location services for accurate data</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_submit_photo">Submit Photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_send_label">Send</string>

</resources>
