<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gun35"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity" >
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="50dp" />
    
    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColorHint="@android:color/darker_gray" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp" />
    
    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/signup_text_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   
</LinearLayout>
